[tool.poetry]
name = "stjudecloud-oliver"
version = "1.0.2"
description = "An opinionated Cromwell orchestration manager."
authors = ["St. Jude Cloud Team <support@stjude.cloud>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stjudecloud/oliver/"
repository = "https://github.com/stjudecloud/oliver/"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
packages = [
    { include = "oliver" }
]
include = ["README.md"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
azure-cosmos = "^3.1.2"
boto3 = "^1.11.9"
logzero = "^1.5.0"
pendulum = "^2.0.5"
requests = "^2.22.0"
tabulate = "^0.8.6"
tzlocal = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-asyncio = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
